@@ -1,3 +1,8 @@
+2019-11-07  Peter Bergner <bergner@linux.ibm.com>
+
+	PR other/92090
+	* gcc.target/powerpc/pr92090.c: New test.
+
 2019-11-07  Feng Xue  <fxue@os.amperecomputing.com>
 
 	PR tree-optimization/89134
