@@ -1,3 +1,9 @@
+2019-11-07  Peter Bergner <bergner@linux.ibm.com>
+
+	PR other/92090
+	* config/rs6000/predicates.md (input_operand): Allow MODE_PARTIAL_INT
+	modes for integer constants.
+
 2019-11-07  Jan Hubicka  <jh@suse.cz>
 
 	PR ipa/92406
